file isn't found), ``Global emulation" (which contains Neo Geo
default emulation options (Graphic, Audio, Keys...) and
``Other" (which mostly contains XGngeo-specific parameters).
- Added a new ``Joystick" section, merged with the ``Audio"
one, where you can, among others, modify the joystick devices
used by the two players.
- Use of the new GTK+ file chooser for selecting files and
directories.
- If already on the ``History" menu, Rom name isn't repeated
any more but moved to the first place.
- Paths in the Option panel now come along with little icons 
which indicate whether the path is valid or not (yeah that's
a killer feature :p).
- Added the possibility to set the absolute path of the Gngeo
executable. It may be interesting if the `gngeo' command
isn't in your PATH or if you have several versions of Gngeo
installed.
- Added support for the ``screen320" option.
- The fullname of a manually loaded Rom is now displayed in
the status bar too (if its MAME name is recognized).
- Bugfix: Gngeo wasn't killed when you want to quit XGngeo
while the emulator was running.
- Bugfix: XGngeo crashed if it didn't find gngeo's configura-
tion file.


* Changes in version 14 (2003-12-31):

- Many new configurable things: auto start roms, preview
images directory, history, etc. ^_^
- XGngeo still usable while running Gngeo (game may be
stopped from interface).
- Some interface improvement.
- XGngeo can now be run from any location without problem
(images not loaded, etc.). ^^
- Full support of GGF's xml file to get rom informations.
- Updated documentation.
- A small source code cleaning. :p


* Changes in version 13 (2003-11-23):

- New configurable options: Neo Geo type (arcade or home),
country and interpolation.
- Display of the Gngeo version used, in the "about" window.
- Now, in the Roms list, only available roms are shown by
default.
- New Portuguese translation by Paulo Eduardo Chiva.
- Updated documentation.


* Changes in version 12 (2003-10-25):
